# tfcpp

./: .gitignore  pacp.sh
examples/namedparam/: CMakeLists.txt  pacp.sh  prog.cpp  prog.hpp
examples/xor/: CMakeLists.txt  pacp.sh  prog.cpp  run.sh  test  test.cpp  test.sh
libs/: namedtype.git
src/: types.cpp  types.hpp
src/tfcpp/: model.cpp  model.hpp  t.cpp  t.hpp  types.hpp
src/tfcpp/ann/: dnn-classifier.cpp  dnn-classifier.hpp
src/tfcpp/miscs/: utils.hpp
tests/: CMakeLists.txt  prog.cpp
